# ai_biznesv2

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  app.py  main.py  prompt.txt  pyproject.toml
src/: image_gen.py  llm.py  scraper.py
