[project]
name = "ai-biznes-p2"
version = "0.1.0"
description = "Generator atrakcyjnych opisów produktów (Streamlit + Ollama)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "beautifulsoup4>=4.12.3",
    "diffusers>=0.37.1",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "streamlit>=1.55.0",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "transformers>=5.9.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
